# kitchen-simulator

./: .gitignore  CLAUDE.md  README.md  batch_simulate.py  extract_data.py  floorplan_2d.html  pyproject.toml  visualize.py  visualize_3d.html
data/extracted/: dataset.json  patterns.json
examples/: fast_food_small.json  fine_dining_large.json  l_shaped_kitchen.json  sample_output.json  simple_rectangle.json
src/kitchen_simulator/: __init__.py  main.py
src/kitchen_simulator/data/: __init__.py  equipment_catalog.py
src/kitchen_simulator/domain/: __init__.py  constraint.py  equipment.py  kitchen.py  zone.py
src/kitchen_simulator/engine/: __init__.py  optimizer.py  placement_engine.py  scoring_engine.py  validation_engine.py  zone_engine.py
src/kitchen_simulator/evaluation/: __init__.py  evaluator.py  metrics.py  models.py
src/kitchen_simulator/generator/: __init__.py  case_retriever.py  equipment_generator.py  layout_generator.py  models.py
src/kitchen_simulator/geometry/: __init__.py  collision.py  partitioner.py  polygon.py
src/kitchen_simulator/patterns/: __init__.py  extractor.py  models.py  provider.py
src/kitchen_simulator/schemas/: __init__.py  dataset.py  input.py  output.py
tests/: __init__.py  conftest.py  test_optimizer.py  test_placement_engine.py  test_zone_engine.py
