[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen-simulator"
version = "0.1.0"
description = "Restaurant kitchen design simulator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
kitchen-sim = "kitchen_simulator.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
